RESOLVED FIXED143661
[Cocoa] Localizable strings are inconsistent and need to be regenerated
https://bugs.webkit.org/show_bug.cgi?id=143661
Summary [Cocoa] Localizable strings are inconsistent and need to be regenerated
Darin Adler
Reported 2015-04-12 23:12:30 PDT
[Cocoa] Localizable strings are inconsistent and need to be regenerated
Attachments
Patch (11.49 KB, patch)
2015-04-12 23:17 PDT, Darin Adler
mitz: review+
Darin Adler
Comment 1 2015-04-12 23:17:31 PDT
Darin Adler
Comment 2 2015-04-12 23:18:41 PDT
Darin Adler
Comment 3 2015-04-13 08:42:39 PDT
Note You need to log in before you can comment on or make changes to this bug.