Source/WebKit/mac/Misc/WebLocalizableStrings.mm
@@ -74,11 +74,14 @@ NSString *WebLocalizedString(WebLocalizableStringsBundle *stringsBundle, const c
 }
 
 #if PLATFORM(IOS)
+
 // See <rdar://problem/7902473> Optimize WebLocalizedString for why we do this on a background thread on a timer callback
 static void LoadWebLocalizedStringsTimerCallback(CFRunLoopTimerRef timer, void *info)
 {
-    dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_LOW, 0), ^{ 
-        UI_STRING_KEY_INTERNAL("Typing", "Typing (Undo action name)", "We don't care if we find this string, but searching for it will load the plist and save the results.");
+    dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_LOW, 0), ^{
+        // We don't care if we find this string, but searching for it will load the plist and save the results.
+        // FIXME: It would be nicer to do this in a more direct way.
+        UI_STRING_KEY_INTERNAL("Typing", "Typing (Undo action name)", "Undo action name");
     });
 }
 
@@ -88,4 +91,5 @@ void LoadWebLocalizedStrings(void)
     CFRunLoopAddTimer(CFRunLoopGetCurrent(), timer, kCFRunLoopCommonModes);
     CFRelease(timer);
 }
+
 #endif
